# native-predicate-solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  library.cpp  library.h
.github/workflows/: build.yaml
